# polaris_sensor

./: .gitignore  .travis.yml  CMakeLists.txt  README-MANIP.md  README.md  dependencies.rosinstall  package.xml
include/polaris_sensor/: polaris_sensor.h
launch/: ndi_polaris_driver.launch  polaris_ros.launch
msg/: StrayMarker.msg
rom/: Calibration_Board.rom  Left_Arm_Base.rom  T0.rom  T1.rom  T2.rom  T3.rom  T4.rom  T5.rom  T6.rom  end_effector.rom  kuka.rom
scripts/: compute_transform_6d.py  distance_p0p1.py  polaris_listener.py  tf_link_to_pointstamped.py
src/: polaris_ros.cpp  polaris_ros_double.cpp  polaris_sensor.cpp
